# scholardb

./: .gitignore  CMakeLists.txt  Makefile  README.md  students.csv  test_echo.py
output/: students_output.csv
src/client/: WebSocketClient.cpp  WebSocketClient.h  main_client.cpp
src/common/: CSVHandler.cpp  CSVHandler.h  Logger.h  Protocol.h  Student.cpp  Student.h  StudentValidator.cpp  StudentValidator.h  Timer.h  main_phase1.cpp
src/repository/: StudentRepository.cpp  StudentRepository.h
src/server/: ConnectionManager.cpp  ConnectionManager.h  WebSocketServer.cpp  WebSocketServer.h  main_server.cpp
tests/: test_csv_handler.cpp  test_repository.cpp  test_validator.cpp
view/: index.html
